Finish basic features.

--- a/client/src/styles/loginFields.css
+++ b/client/src/styles/loginFields.css
@@ -21,6 +21,11 @@
   max-width: 200px;
 }
 
+.loginForm > a {
+  position: relative;
+  margin-left: 50%;
+}
+
 .loginDiv {
   margin-left: 40%;
   margin-right: auto;
